Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10629

Cannot clear a default OST pool from root

XMLWordPrintable

    • 9223372036854775807

      If I set a pool to a directory, it does not seem possible to actually remove it. It can be changed, but a pool cannot be reset to the default.

      Things that don't work:

      lfs setstripe -d /mnt/lustre
      lfs setstripe -p "" /mnt/lustre
      lfs setstripe -p /mnt/lustre
      lfs setstripe -p NONE /mnt/lustre

      I see no other hints in the code as to what it might be.

            bevans Ben Evans (Inactive)
            bevans Ben Evans (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: